<resources>
    <string name="app_name">MobileFinalProject</string>
    <string name="news">News</string>
    <string name="currencies">Currencies</string>
    <string name="recipes">Recipes</string>
    <string name="stations">Stations</string>
    <string name="Feed">Feed</string>
    <string name="Saved">Saved</string>
    <string name="toast">Toast</string>
    <string name="Snack">Snack</string>
    <string name="typesearch">Type Search Here</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
</resources>
