<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    style="@style/HeaderBar">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        android:title="@string/search"/>

    <!-- Toast -->
    <item android:id="@+id/action_toast"
        android:title="@string/toast"
        android:icon="@drawable/toast"
        app:showAsAction="always"/>

    <item android:id="@+id/action_snackbar"
        android:title="@string/Snack"
        android:icon="@drawable/snack"
        app:showAsAction="always"/>


    <!-- Saved Articles-->
    <item android:id="@+id/action_saved"
        android:title="@string/Saved"
        app:showAsAction="always"/>


</menu>