<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout android:id="@+id/top_layer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
        <ImageView
            android:id="@+id/dialog_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@drawable/refresh" />

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_image"
            android:textSize="35sp"
            android:text="@string/description"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/dialog_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_title"
            android:textSize="20sp"
            android:text="@string/description"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_description"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/dialog_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save" />

            <Button
                android:id="@+id/dialog_browse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open"/>
        </LinearLayout>

</RelativeLayout>
</ScrollView>